[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.8"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-test = "18.4.1"
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
